# sorcha

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  LICENSE.txt  PPConfig.ini  PPConfig.py  PPConfig_sc.py  PPDetectionProbability.py  README.md  Rubin_full_footprint.ini  __init__.py  cols.csv  demo_transformFilters.ipynb  documentation_instructions.txt  makeConfigOIF.py  objectsInField.slurm  oiftestoutput  orbs.csv  outtest  post_processing.slurm  post_readin_ephem_nonprimary.csv  pp_results  pyproject.toml  readOif.py  recipe_samncorn.py  requirements.txt  sample_recipe.py  sample_recipe_sc.py  setup.cfg  setup.py  sorcha_citation.txt  sorcha_config_demo.ini  surveySimPP.py  test.csv  testcolour  (+3 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  other.md
.github/workflows/: PULL_REQUEST_TEMPLATE.md  benchmark.yml  build-documentation.yml  ci.yml  draft-JOSS-pdf.yml  linting.yml  publish-to-pypi.yml  pytest.yml  smoke-test.yml  testing-and-coverage.yml
JOSS_submission/: example.md  paper.bib  paper.md
benchmarks/: README.md  bench_ApplyColourOffsets.py  bench_DetectionEfficiency.py  bench_LCA.py  bench_cProfile.py  cprofile_ReadPointingDatabase.py  test_bench.py  test_bench_config.ini
configs/: defaults.ini
data/: granvik_5k.txt  l7_5k.txt  mba_5k.s3m  trojan_5k.s3m  unittest.db
data/test/: 67P.orb.des  baseline_10yrs_10klines.db  colours_10mbas.txt  comet_pointing.db  test_input_PPDetectionProbability  testbrightness  testcolour.txt  testcomet  testcometcolour  testcometcolour.txt  testdb_PPIntermDB.db  testorb.des
demo/: ARconfig_benchmark.ini  OIFconfig_benchmark.ini  OIFconfig_lca.ini  OIFconfig_test.ini  PPConfig.ini  PPConfig_10mbas.ini  PPConfig_test.ini  PPConfig_test_chunked.ini  PPConfig_test_unchunked.ini  README.md  README.txt  README_run_oif_test.sh  baseline_v2.0_1yr.db  bench_LCA.py  bench_cProfile.py  bench_ephemeris.py  colours_10mbas.txt  config_for_ephemeris_unit_test.ini  demo_ApparentMagnitudeValidation.ipynb  demo_CalculateSimpleCometaryMagnitude.ipynb  demo_CircleFootprint.ipynb  demo_DetectionEfficiencyValidation.ipynb  demo_MagnitudeAndSNRCuts.ipynb  demo_TrailingLossesValidation.ipynb  demo_UncertaintiesAndRandomization.ipynb  demo_addUncertainties.ipynb  demo_footprintFilter.ipynb  demo_randomize.ipynb  demo_vignetting.ipynb  example_oif_output.txt  mba_sample_1000_orbit.csv  mba_sample_1000_physical.csv  multi_sorcha.py  multi_sorcha.sh  oif.test.input.config  oif_10mbas.txt  oneline_v2.0.db  orbits_10mbas.des  orbits_small_random_mpcorb.csv  params_small_random_mpcorb.csv  (+15 more)
demo/goldens/: out_end2end.csv  sorcha_ephemeris.csv
docs/: .gettingstarted.rst.swp  .notebooks.rst.swp  .outputs.rst.swp  .readthedocs.yml  Makefile  acknowledgements.rst  advanced.rst  apparentmag.rst  cite.rst  complexparameters.rst  conf.py  configfiles.rst  contributors.rst  environment.yaml  ephemerisgen.rst  exampleconfig.rst  filters.rst  gettingstarted.rst  hpc.rst  index.rst  inputs.rst  installation.rst  lsstcomet.rst  modules.rst  notebooks.rst  outputs.rst  overview.rst  postprocessing.rst  release.rst  requirements.txt  support.rst  surveySimPP.lsstcomet.rst  surveySimPP.modules.rst  surveySimPP.rst  surveySimPP.utilities.rst  troubleshooting.rst  tutorial.rst  uninstall.rst  usingoif.rst  whatsorchadoesnotdo.rst  (+1 more)
docs/autoapi/: index.rst
docs/example_files/: assist_rebound.csv  help_output.txt  multi_sorcha.py  multi_sorcha.sh  sorcha.sh  sorcha_help.txt  testrun_e2e.csv  testrun_stats.csv
docs/notebooks/: 2002PN34_highres.spec  CCDVisits.csv  README.md  demo_ApparentMagnitudeValidation.ipynb  demo_CalculateLSSTColours.ipynb  demo_CalculateSimpleCometaryMagnitude.ipynb  demo_CameraFootprint.ipynb  demo_CircleFootprint.ipynb  demo_Cometary_Activity.ipynb  demo_CoordinateTransformations.ipynb  demo_CreatingDESSorchaDatabases.ipynb  demo_CreatingDP1SorchaDatabases.ipynb  demo_DetectionEfficiencyValidation.ipynb  demo_FootprintFilter.ipynb  demo_GenerateBashScripts.ipynb  demo_GenerateSLURMScripts.ipynb  demo_Lightcurve.ipynb  demo_LinkingFilter.ipynb  demo_MagnitudeAndSNRCuts.ipynb  demo_PlotLSSTCamCornersFOVs.ipynb  demo_TrailingLossPhasecurve.ipynb  demo_TrailingLossesValidation.ipynb  demo_UncertaintiesAndRandomization.ipynb  demo_Verification.ipynb  demo_Vignetting.ipynb  demo_VisitsFootprintFilter.ipynb  demo_footprintFilter.ipynb  demo_miniDifiValidation.ipynb  demo_vignetting.ipynb  fieldVisits.csv  verification_output.csv
example/: recipes.txt  sample_recipe.py
lsstcomet/: LICENSE  README.md  setup.py
lsstcomet/tests/: test_model.py
modules/: PPAddUncertainties.py  PPAppmag_to.py  PPBrightLimit.py  PPCalculateApparentMagnitude.py  PPCalculateApparentMagnitudeInFilter.py  PPCalculateSimpleCometaryMagnitude.py  PPCheckOrbitAndColoursMatching.py  PPConfig.py  PPDetectionProbability.py  PPDropObservations.py  PPFilterDetectionEfficiencyThreshold.py  PPFilterSSPCriterionEfficiency.py  PPFilterTransform.py  PPFootprintFilter.py  PPFootprintFilter_xyz.py  PPJoinColourPointing.py  PPJoinCometaryWithOrbits.py  PPMakeIntermediatePointingDatabase.py  PPMatchFieldConditions.py  PPMatchPointing.py  PPMatchPointingsAndColours.py  PPOut.py  PPOutWriteCSV.py  PPOutWriteHDF5.py  PPOutWriteSqlite3.py  PPRandomize.py  PPRandomizeMeasurements.py  PPReadBrightness.py  PPReadColours.py  PPReadCometaryInput.py  PPReadConfigFile.py  PPReadOif.py  PPReadOrbitFile.py  PPRunUtilities.py  PPSimpleSensorArea.py  PPTrailingLoss.py  PPTranslateMagnitude.py  PPVignetting.py  PPhookBrightnessWithColour.py  PPreadColours.py  (+4 more)
modules/.ipynb_checkpoints/: PPDetectionProbability-checkpoint.py  PPRandomize-checkpoint.py  PPTrailingLoss-checkpoint.py  __init__-checkpoint.py
modules/filtering/: PPFilterDetectionEfficiencyThreshold.py
surveySimPP/: __init__.py  surveySimPP.py  surveySimPP_imports.py
survey_setups/: README  Rubin_circular_approximation.ini  Rubin_full_footprint.ini
utilities/: makeConfigOIF.py  makeConfigPP.py
(+813 files in other folders)
