[metadata]
name = surveySimPP
author = Meg Schwamb
author_email = m.schwamb@qub.ac.uk
license = GNU General Public License v3.0
license_file = LICENSE.txt
url = https://github.com/dirac-institute/survey_simulator_post_processing
project_urls =
    Documentation = https://survey-simulator-post-processing.readthedocs.io/en/latest/
    Source = https://github.com/dirac-institute/survey_simulator_post_processing
description = The Survey Simulator Post Processing code for the LSST
long_description = file: README.md
long_description_content_type = text/markdown
# TODO: Add keywords
# keywords =
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    numpy==1.24.3
    pandas
    scipy
    astropy
    matplotlib
    sbpy
    tables

[options.entry_points]
console_scripts =
    surveySimPP = surveySimPP.surveySimPP:main
    makeConfigOIF = surveySimPP.utilities.makeConfigOIF:main
    makeConfigPP = surveySimPP.utilities.makeConfigPP:main
    makeMultiConfigOIF = surveySimPP.utilities.makeMultiConfigOIF:main
    makeSLURMscript = surveySimPP.utilities.makeSLURMscript:main
    createResultsSQLDatabase = surveySimPP.utilities.createResultsSQLDatabase:main
    createTemporaryDatabases = surveySimPP.utilities.createTemporaryDatabases:main

[options.extras_require]
test =
    pytest
    pytest-cov
    flake8
docs =
    sphinx
    sphinx-rtd-theme
    setuptools_scm
benchmark =
    lf-metric-emitter
    memory-profiler

[options.package_data]
surveySimPP.tests.data = *, */*

[tool:pytest]
testpaths = "surveySimPP" "docs"
norecursedirs = "docs[\/]_build"
filterwarnings =
    error

[flake8]
max-line-length = 100
extend-ignore = E501,E126,E228,E133,W503
per-file-ignores =
    surveySimPP/modules/__init__.py:F401